Revert "Remove icon.ico, keep only icon.png, see https://www.electron.build/icons.html#windows-nsis"
This reverts commit b97f81b07db76c96817294064f32127ba0853190.

--- a/.github/workflows/build-apps.yml
+++ b/.github/workflows/build-apps.yml
@@ -65,6 +65,7 @@ jobs:
             electron-builder.yml
             src/wasm-lib/pkg/wasm_lib*
             release-notes.md
+            assets/icon.ico
             assets/icon.png
 
       - id: export_version
@@ -116,6 +117,7 @@ jobs:
           mkdir src/wasm-lib/pkg
           cp prepared-files/src/wasm-lib/pkg/wasm_lib* src/wasm-lib/pkg
           cp prepared-files/release-notes.md release-notes.md
+          cp prepared-files/assets/icon.ico assets/icon.ico
           cp prepared-files/assets/icon.png assets/icon.png
 
       - name: Sync node version and setup cache
