Fix to never have undefined iteration order and lint against it

--- a/src/wasm-lib/kcl-to-core/Cargo.toml
+++ b/src/wasm-lib/kcl-to-core/Cargo.toml
@@ -21,3 +21,6 @@ kittycad = { workspace = true, features = ["clap"] }
 kittycad-modeling-cmds = { workspace = true }
 tokio = { version = "1.41", features = ["full", "time", "rt", "tracing"] }
 uuid = { version = "1.11.0", features = ["v4", "js", "serde"] }
+
+[lints]
+workspace = true
