--- a/src/wasm-lib/Cargo.toml
+++ b/src/wasm-lib/Cargo.toml
@@ -77,6 +77,9 @@ http = "1"
 kittycad = { version = "0.3.28", default-features = false, features = ["js", "requests"] }
 kittycad-modeling-cmds = { version = "0.2.77", features = ["websocket"] }
 
+[workspace.lints.clippy]
+iter_over_hash_type = "warn"
+
 [[test]]
 name = "executor"
 path = "tests/executor/main.rs"
