--- a/src/wasm-lib/kcl-test-server/Cargo.toml
+++ b/src/wasm-lib/kcl-test-server/Cargo.toml
@@ -13,3 +13,6 @@ pico-args = "0.5.0"
 serde = { version = "1.0.214", features = ["derive"] }
 serde_json = "1.0.128"
 tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
+
+[lints]
+workspace = true
