--- a/.github/workflows/build-apps.yml
+++ b/.github/workflows/build-apps.yml
@@ -368,7 +368,7 @@ jobs:
           # Note: prefered going this way instead of a full clone in the checkout step,
           # see https://github.com/actions/checkout/issues/1471
           git fetch --prune --unshallow --tags
-          export TAG="nightly-$VERSION"
+          export TAG="nightly-${VERSION}"
           export PREVIOUS_TAG=$(git describe --tags --match="nightly-v[0-9]*" --abbrev=0)
           export NOTES=$(./scripts/get-nightly-changelog.sh)
           yarn files:set-notes
