Cleaner nightly release notes (#4668)
* Bump: Improve and fix nightly release notes

* Clean up after manual push

* Consistency tweak

--- a/.github/workflows/build-apps.yml
+++ b/.github/workflows/build-apps.yml
@@ -362,6 +362,17 @@ jobs:
       - name: List artifacts
         run: "ls -R out"
 
+      - name: Set more complete nightly release notes
+        if: ${{ env.IS_NIGHTLY == 'true' }}
+        run: |
+          # Note: prefered going this way instead of a full clone in the checkout step,
+          # see https://github.com/actions/checkout/issues/1471
+          git fetch --prune --unshallow --tags
+          export TAG="nightly-${VERSION}"
+          export PREVIOUS_TAG=$(git describe --tags --match="nightly-v[0-9]*" --abbrev=0)
+          export NOTES=$(./scripts/get-nightly-changelog.sh)
+          yarn files:set-notes
+
       - name: Authenticate to Google Cloud
         if: ${{ env.IS_NIGHTLY == 'true' }}
         uses: 'google-github-actions/auth@v2.1.7'
