--- a/.github/workflows/build-apps.yml
+++ b/.github/workflows/build-apps.yml
@@ -365,7 +365,7 @@ jobs:
       - name: Set more complete nightly release notes
         if: ${{ env.IS_NIGHTLY == 'true' }}
         run: |
-          # Note: prefered going this way instead of a full clone in the checkout step,
+          # Note: preferred going this way instead of a full clone in the checkout step,
           # see https://github.com/actions/checkout/issues/1471
           git fetch --prune --unshallow --tags
           export TAG="nightly-${VERSION}"
@@ -393,6 +393,10 @@ jobs:
           glob: '*'
           parent: false
           destination: 'dl.kittycad.io/releases/modeling-app/nightly'
+
+      - name: Invalidate bucket cache on latest*.yml and last_download.json files
+        if: ${{ env.IS_NIGHTLY == 'true' }}
+        run: yarn files:invalidate-bucket:nightly
 
       - name: Tag nightly commit
         if: ${{ env.IS_NIGHTLY == 'true' }}
