--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -1,7 +1,7 @@
 name: E2E Tests
 on:
   push:
-    branches: [ main ]
+    branches: [ main, pierremtb/electron-tests-one-last-try-16-core-win ]
   pull_request:
     branches: [ main ]
 
@@ -39,7 +39,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [namespace-profile-ubuntu-8-cores, namespace-profile-macos-8-cores, windows-latest-8-cores]
+        # os: [namespace-profile-ubuntu-8-cores, namespace-profile-macos-8-cores, windows-latest-8-cores]
+        os: [windows-16-cores]
         shardIndex: [1, 2, 3, 4]
         shardTotal: [4]
     runs-on: ${{ matrix.os }}
