--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -40,7 +40,7 @@ jobs:
       fail-fast: false
       matrix:
         # os: [namespace-profile-ubuntu-8-cores, namespace-profile-macos-8-cores, self-hosted-windows-8-cores]
-        os: [windows-16-cores]
+        os: [namespace-profile-ubuntu-8-cores, namespace-profile-macos-8-cores, windows-16-cores]
         shardIndex: [1, 2, 3, 4]
         shardTotal: [4]
     runs-on: ${{ matrix.os }}
