Revert "Enable test on current branch"
This reverts commit 0d970b9ad6dac4fcc446b227c8e3d99cc9cb6ee8.

--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -1,7 +1,7 @@
 name: E2E Tests
 on:
   push:
-    branches: [ main, pierremtb/issue4838-re-enable-code-pane-closed-at-start ]
+    branches: [ main ]
   pull_request:
     branches: [ main ]
 
