--- a/packages/codemirror-lang-kcl/tsconfig.json
+++ b/packages/codemirror-lang-kcl/tsconfig.json
@@ -14,5 +14,5 @@
     "declaration": true
   },
   "include": ["src", "./*.ts"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "vitest.main.config.ts"]
 }
