--- a/packages/codemirror-lang-kcl/tsconfig.json
+++ b/packages/codemirror-lang-kcl/tsconfig.json
@@ -5,8 +5,9 @@
     "outDir": "dist",
     "target": "esnext",
     "lib": ["dom", "dom.iterable", "esnext"],
-    "module": "commonjs",
+    "module": "esnext",
     "esModuleInterop": true,
+    "moduleResolution": "node",
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "noImplicitAny": true,
