--- a/.github/workflows/build-apps.yml
+++ b/.github/workflows/build-apps.yml
@@ -5,6 +5,7 @@ on:
   push:
     branches:
       - main
+      - pierremtb/issue4199-improve-mac-notarization
     tags:
       - 'v[0-9]+.[0-9]+.[0-9]+'
   schedule:
@@ -173,6 +174,7 @@ jobs:
           CSC_KEY_PASSWORD: ${{ secrets.APPLE_CERTIFICATE_PASSWORD }}
           CSC_KEYCHAIN: ${{ secrets.APPLE_SIGNING_IDENTITY }}
           WINDOWS_CERTIFICATE_THUMBPRINT: ${{ secrets.WINDOWS_CERTIFICATE_THUMBPRINT }}
+          DEBUG: "electron-notarize*"
         run: yarn electron-builder --config --publish always
 
       - name: List artifacts in out/
