--- a/.github/workflows/build-apps.yml
+++ b/.github/workflows/build-apps.yml
@@ -14,7 +14,8 @@ on:
   # Will checkout the last commit from the default branch (main as of 2023-10-04)
 
 env:
-  IS_RELEASE: ${{ github.ref_type == 'tag' }}
+  # IS_RELEASE: ${{ github.ref_type == 'tag' }}
+  IS_RELEASE: true
   IS_NIGHTLY: ${{ github.event_name == 'schedule' }}
 
 concurrency:
