--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -16,8 +16,7 @@ mac:
       arch:
         - x64
         - arm64
-  notarize:
-    teamId: 92H8YB3B95
+  notarize: true
   fileAssociations:
     - ext: kcl
       name: kcl
