Temp: another test

--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -38,7 +38,7 @@ win:
     #     - arm64
   signingHashAlgorithms:
     - sha256
-  sign: "./sign-win.js"
+  sign: "./scripts/sign-win.js"
   publisherName: "KittyCAD Inc" # needs to be exactly like on Digicert
   icon: "assets/icon.ico"
   fileAssociations:
