Add dependabot group for all serde dependencies

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -26,3 +26,7 @@ updates:
     reviewers:
       - adamchalmers
       - jessfraz
+    groups:
+      serde-dependencies:
+        patterns:
+          - "serde*"
