Get primary user flow working on desktop

--- a/.env.development
+++ b/.env.development
@@ -8,3 +8,5 @@ VITE_KC_SKIP_AUTH=false
 VITE_KC_CONNECTION_TIMEOUT_MS=5000
 # ONLY add your token in .env.development.local if you want to skip auth, otherwise this token takes precedence!
 #VITE_KC_DEV_TOKEN="your token from dev.zoo.dev should go in .env.development.local"
+# Add a prod token if you want to use the share URL feature in local dev
+#VITE_KC_PROD_TOKEN="your token from prod.zoo.dev should go in .env.development.local"
