Change Dependabot PRs to always be made on Mondays

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,21 +8,24 @@ updates:
   - package-ecosystem: 'npm' # See documentation for possible values
     directory: '/' # Location of package manifests
     schedule:
-      interval: 'weekly'
+      interval: weekly
+      day: monday
     reviewers:
       - franknoirot
       - irev-dev
   - package-ecosystem: 'github-actions' # See documentation for possible values
     directory: '/' # Location of package manifests
     schedule:
-      interval: 'weekly'
+      interval: weekly
+      day: monday
     reviewers:
       - adamchalmers
       - jessfraz
   - package-ecosystem: 'cargo' # See documentation for possible values
     directory: '/src/wasm-lib/' # Location of package manifests
     schedule:
-      interval: 'weekly'
+      interval: weekly
+      day: monday
     reviewers:
       - adamchalmers
       - jessfraz
