WIP: Turn on link sharing in released apps with electron-builder Fixes #5136

--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -75,3 +75,6 @@ publish:
     channel: latest
 releaseInfo:
   releaseNotesFile: release-notes.md
+protocols:
+  - name: Zoo Studio
+    schemes: ['zoo-studio']
